styles.css
@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');

body {
    margin:0;
    padding:0;

    font-family: Roboto, sans-serif;

    box-sizing: border-box;
}

.header {
    display: flex;
    align-items: center;
    justify-content: space-between;
    background-color: #1F2937;
    color: white;
    padding: 5px 10%;
}

.header ul {
    display: flex;
    gap: 18px;
    list-style-type: none;
    margin: 0;
    padding: 0;
}

.left{
    font-size: 22px;
    font-weight: 900;
    font: #F9FAF8;
}

.right{
    font-size: 18px;
    font: #E5E7EB;
}

.footer {

    margin: 0;
    padding: 5px;

    text-align: center;
    background-color: #1F2937;
    font-size: 12px;
    color: #E5E7EB;
}

.footer p {
    margin: 2px;
    padding: 0;
}

.footer a {
    font-weight: 900;
}

.lander {
    background-color: #1F2937;
    padding:6% 10%;

    display: flex;
    align-items: center;
    gap: 3%;
}

.lander-left {
    flex:2;
    flex-direction: column;
}

.lander-right {
    flex:1;
    flex-direction: column;
}

img {
    max-width:100%;
}

.lander h1 {
    font-size: 44px;
    font-weight: 900;
    color: #F9FAF8;
}

.hsub {
    font-size: 18px;
    color: #E5E7EB;
}

.about {
    padding: 5% 10%;
    color: #1F2937;
}

.about h1 {
    font-size: 44px;
    font-weight: 900;


    text-align: center;
}

.about-txt {
    font-size: 18px;
    background-color: #E5E7EB;
    padding: 5%;
}

.projects {
    padding: 5% 10%;
}
.projects h2 {
    text-align: center;
    font-size: 32px;
    font-weight: 900;
    color: #1F2937;
}
.projects ul {
    margin: 0;
    padding: 0;
    list-style-type: none;
    display:flex;

    align-items: stretch; /* Makes sure all boxes have the same height */
    gap: 30px;
}

.projects li {
    flex: 1;
    list-style-type: none;

    padding: 2%;
}

.project-image {
    max-width: 100%;
    height: auto;


    border: solid 7px #3882f6;
    border-radius: 10px;
}
.projects 

.projects li p {
    font-size: 20px;
    color: #1F2937;
    text-align: center;
}

.competitions {
    margin: 5% 10%;

    padding: 3% 3%;

    background-color:#1F2937;

    border-radius: 10px;
}

.competitions h2 {
    text-align: center;

    margin-bottom: 50px;

    font-size: 32px;
    font-weight: 900;
    color: #F9FAF8;
}

.competitions ul {
    display:flex;
    gap: 15px;
    align-items: stretch;

    margin: 0;
    padding: 0;
    list-style-type: none;
}

.competitions li {
    flex: 1;
    background-color: #F3F4F6;
    color: #1F2937;

    text-align: center;
    display: flex;
    align-items: center;
    justify-content: center;

    padding: 3%;

    font-size: 18px;
    font-weight: 600;

    border-radius: 5px;
}

.competitions a{
    text-decoration: none;
    color: inherit;
}

.blog {
    padding: 5% 10%;

    background-color: #E5E7EB;
}

.blog h2 {
    text-align: center;
    font-size: 22px;
    font-weight: 900;
}

.blog li{
    font-size: 42;
    font-weight: 600;
}

.main {
    /*padding:10%;*/
}

